--- a/ARIN_Course_Intelligent_Children_Clothing_Size_Matching.ipynb
+++ b/ARIN_Course_Intelligent_Children_Clothing_Size_Matching.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7lVgWsDHaq+6uNDVmpYSF",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyP7lVgWsDHaq+6uNDVmpYSF"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/DannyNguyen24-Vietnam/DannyNguyen24-Vietnam-Artificial-Intellgence-Course---HCMUTE---Intelligent-Children-Clothing-System-/blob/main/ARIN_Course_Intelligent_Children_Clothing_Size_Matching.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -43,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "TtM2e-YJHuNF",
         "colab": {
@@ -89,7 +78,7 @@
       "metadata": {
         "id": "9uYLDFtlhmjt"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +135,7 @@
         "id": "vtdo8bMmhmtH",
         "outputId": "c4410ef2-f9e9-4e1a-f877-67260ea311cc"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -189,7 +178,7 @@
         "id": "efIo9jFToPYH",
         "outputId": "69925c40-21eb-4ffc-b06f-8b8f45ea31d9"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -232,7 +221,7 @@
         "id": "Xip3RQ3GjZoK",
         "outputId": "634f2b6d-fb51-418d-b7b2-7ffe1c4ad9d2"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -275,7 +264,7 @@
         "id": "l57ul4szjm5v",
         "outputId": "dad52401-1a65-4a74-a19b-5eb4838b0132"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -338,7 +327,7 @@
       "metadata": {
         "id": "SWT7dW6W0ksR"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -353,7 +342,7 @@
       "metadata": {
         "id": "MDE2exuc17Be"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -379,7 +368,7 @@
         "id": "NjsGGLYE2Gr1",
         "outputId": "a7ade6d1-0296-4b55-e41b-c69448dd822e"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -425,7 +414,7 @@
         "id": "EaAd4ekiCL3y",
         "outputId": "31a38e64-0e29-4882-e144-7b0cce6a7948"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,7 +460,7 @@
         "id": "elkWTiIx6yib",
         "outputId": "fcdb00f4-1d34-4daf-a7c9-0dc83fe81ac9"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,7 +506,7 @@
         "id": "TDmmmMHZCbtY",
         "outputId": "230b83a2-a7f3-4ddd-dc45-fc91c019342f"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,7 +552,7 @@
         "id": "dchaG0SLCh1y",
         "outputId": "d5924aa8-abee-4797-96a1-5aeba3042f6e"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,7 +598,7 @@
         "id": "4oUHUWyoCvqQ",
         "outputId": "5338f062-2679-4e05-ee60-49c19d87d4ed"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -655,7 +644,7 @@
         "id": "CUsaYxNr446V",
         "outputId": "7316b1e1-c6b2-424e-fab8-92f6dbecee15"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -701,7 +690,7 @@
         "id": "HhrcPCHLC1iv",
         "outputId": "30d34a7e-19c9-49d0-bd67-95118c82f554"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -747,7 +736,7 @@
         "id": "CZJjXU5WC8Yp",
         "outputId": "a5317f61-c2bf-4356-da91-368d1c85a08e"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,7 +816,7 @@
         },
         "outputId": "7e1e4e3b-d144-433a-d4d2-02751b57b491"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -873,7 +862,7 @@
         },
         "outputId": "70ec90b9-7510-4fc8-dd92-6cf297ed63d1"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -919,7 +908,7 @@
         "id": "27C1GPglwbeJ",
         "outputId": "b899deac-a9aa-438c-db95-a34d42850953"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -964,7 +953,7 @@
         "id": "pjXM6aT1xreT",
         "outputId": "5fa12d31-746f-433d-a008-931752c3d8b7"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1017,7 +1006,7 @@
       "metadata": {
         "id": "Cog9L2lhy4vp"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1034,7 +1023,7 @@
         "id": "MdV2cZr-_Gz_",
         "outputId": "d535f1b3-5ab4-46b8-e439-257e993d23f3"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1070,7 +1059,7 @@
       "metadata": {
         "id": "ER8uN48rzfx5"
       },
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1096,7 +1085,7 @@
         "id": "gf_eoqr_DK-l",
         "outputId": "3bb0f21b-9476-4427-8b1f-371c53dca2fa"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1142,7 +1131,7 @@
         "id": "0Mg0KGI3zsK5",
         "outputId": "bbebccb1-98cd-43df-fc0f-72fccb675f9c"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1188,7 +1177,7 @@
         "id": "AF_eE-Z9EK2t",
         "outputId": "8d382813-cbfd-4125-effa-50159f23ccaa"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1234,7 +1223,7 @@
         "id": "qGukl6eREpXk",
         "outputId": "b5d47519-5c33-42c8-c6c9-0e6e360e8bf9"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1280,7 +1269,7 @@
         "id": "OJtcV_zjE_Ob",
         "outputId": "a51e9a82-d0ba-46c7-b51a-6acc4689baa1"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1326,7 +1315,7 @@
         "id": "t8LqkiPUGr0v",
         "outputId": "bcd0daa7-52ed-4c86-ac67-7e3ceef10f0f"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
